--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+
+    implementation 'mysql:mysql-connector-java'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
